--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Reuse same header markup as index.html -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">Your<span>Portfolio</span></a>
@@ -41,12 +40,12 @@
           <ul class="tools">
             <li>HTML5, CSS3, JavaScript (ES6+)</li>
             <li>Git, GitHub</li>
-            <li>Java, MySQL</li>
+            <li>Java,C,C++, MySQL</li>
             <li>Responsive Design & Accessibility</li>
           </ul>
 
           <h3>Education</h3>
-          <p>B.Tech in Computer Science ( 2024 - 2028)</p>
+          <p>B.Tech in Computer Science(2024 - 2028)</p>
         </div>
       </div>
     </section>
@@ -61,3 +60,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
