--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
         <article id="project1" class="project-detail card glass">
           <div class="project-meta">
-            <img src="assets/screenshots/project1.png" alt="Project 1 preview" />
+            <img src="project1.png" alt="Project 1 preview" />
             <div>
               <h2>Portfolio Website</h2>
               <p>Technologies: HTML, CSS, JavaScript</p>
@@ -47,7 +47,7 @@
 
         <article id="project2" class="project-detail card glass">
           <div class="project-meta">
-            <img src="assets/screenshots/project2.png" alt="Project 2 preview" />
+            <img src="project2.png" alt="Project 2 preview" />
             <div>
               <h2>Ecommerce shopping cart System</h2>
               <p>Technologies: Java, MySQL</p>
@@ -82,3 +82,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
