--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 
         <article id="project3" class="project-detail card glass">
           <div class="project-meta">
-            <img src="assets/screenshots/project3.png" alt="Project 3 preview" />
+            <img src="project3.png" alt="Project 3 preview" />
             <div>
               <h2>Contact form</h2>
               <p>Technologies: JS, HTML ,CSS</p>
@@ -82,4 +82,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
