--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Projects — Disha</title>
+  <title>Projects-Disha</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">Your<span>Portfolio</span></a>
+      <a class="brand" href="index.html">My<span>Portfolio</span></a>
       <button id="nav-toggle" class="nav-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Open menu">
         <span class="hamburger"></span>
       </button>
@@ -82,5 +82,6 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
