--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
       </nav>
       <div class="header-actions">
         <button id="theme-toggle" class="theme-toggle" aria-pressed="false">🌙</button>
-        <a class="cta" href="assets/resume.pdf" download>Resume</a>
+        <a class="cta" href="resume.pdf" download>Resume</a>
       </div>
     </div>
   </header>
@@ -82,6 +82,7 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
