--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
       <div class="header-actions">
         <button id="theme-toggle" class="theme-toggle" aria-pressed="false" title="Toggle theme">🌙</button>
+        <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
         <a class="cta" href="resume.pdf" download>Resume</a>
       </div>
     </div>
@@ -110,4 +111,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
